--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,10 @@ httpx
 requests
 cuid2
 pytest>=7.0.0
-pytest-asyncio>=0.21.0 
+pytest-asyncio>=0.21.0
+# LangGraph dependencies
+langchain-core
+langchain
+langchain-openai
+langgraph
+xxhash 
