clean and minimal n8n paywall template for masumi

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
-# Payment Service Configuration
-PAYMENT_SERVICE_URL=http://localhost:3001/api/v1 # where your masumi-payment-service is running
-PAYMENT_API_KEY=clean_installation_masumi_payment_service # for masumi-payment-service. can be your admin key, but better to create a payment API key
+# Configuration for n8n workflow replica script
+# Copy this file to .env and update with your values
 
-# Agent Configuration (update AGENT_IDENTIFIER after registering your agent)
-AGENT_IDENTIFIER=replace_this_with_your_actual_identifier_recieved_after_registering_your_agent_via_your_masumi_payment_service
-SELLER_VKEY=replace_with_your_seller_wallet_vkey # can be retrieved from your masumi-payment-service/wallets
-
-# Network Configuration
-NETWORK=Preprod # or Mainnet
-PORT=8000 # default port for serving the service
+# Masumi Payment Service configuration
+PAYMENT_SERVICE_URL=https://your-payment-service-url/api/v1
+PAYMENT_API_KEY=your-admin-or-payment-API-key
+AGENT_IDENTIFIER=your-agent-identifier
+SELLER_VKEY=seller-wallet-vkey
+NETWORK=Preprod  # or Mainnet
