--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,3 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-pydantic>=2.0.0
-python-dotenv
-masumi==0.1.39
-httpx
-requests
-cuid2
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-# LangGraph dependencies
-langchain-core
-langchain
-langchain-openai
-langgraph
-xxhash 
+# Minimal requirements for n8n workflow replica script
+requests==2.31.0
+python-dotenv==1.0.0
