refactor: enhance ServiceResult structure for improved data handling
- updated ServiceResult class to accept raw data and a JSON dictionary
- removed reversed_text attribute and adjusted initialization parameters
- modified return statement in AgenticService to align with new ServiceResult structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,12 @@ dependencies = [
     "python-dotenv",
     "httpx",
     "cuid2>=2.0.1",
+    "pyyaml",
+    "langchain",
+    "langchain-core",
+    "langchain-openai",
+    "langgraph",
+    "xxhash",
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
 ]
