--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ SELLER_VKEY=replace_with_your_seller_wallet_vkey # can be retrieved from your ma
 # Network Configuration
 NETWORK=Preprod # or Mainnet
 PORT=8000 # default port for serving the service
+
+
+ANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=ai-content-agent
+SERPAPI_KEY= 
+
+IMAGE_GENERATION_SERVICE_URL="https://image-generation-agent-production.up.railway.app"
