feat: integrate Masumi image generation into LangGraph workflow
- added image generation capabilities to the ContentGraph class
- introduced new methods for handling image generation and error management
- updated LangGraphService to include image metadata in the response payload
- modified .env.example to include new configuration options for image agent and payment service
- enhanced README with instructions for Masumi image agent integration
- added tests to ensure image fields are present and handle errors gracefully

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,5 @@ LANGSMITH_API_KEY=
 LANGSMITH_PROJECT=ai-content-agent
 SERPAPI_KEY= 
 
-IMAGE_GENERATION_SERVICE_URL="https://image-generation-agent-production.up.railway.app"
+IMAGE_AGENT_BASE_URL="https://image-generation-agent-production.up.railway.app"
+IMAGE_PAYMENT_SERVICE_URL=
